# edsa_pos

./: Cargo.toml  corrections  todo.md
records/: Ungadyield  arimisdyield  asasadyield  asewdyield  aszasdyield  chicken feedsdyield  cow saltsdyield  creditors  dailyyield  debtors  employees  finishedproduct  finprod  flourdyield  in_acc  oilydyield  olladyield  out_acc  people  pjoiodyield  pkgprod  production  products  qwertydyield  rawmat  ungadyield
src/: main.rs  printables.rs  salepoint.rs  setup.rs  styles.rs
