[package]
name = "edsafeeds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe="0.16"
serde={version="1", features=["derive"]}
confy = "0.4.0"
tracing="0.1"
tracing-subscriber = "0.2.25"
serde_yaml="0.8.23"
edsa_pos={path="../edsa_pos"}
